--- a/Flip2Learn.Forms/Flip2Learn.Forms.csproj
+++ b/Flip2Learn.Forms/Flip2Learn.Forms.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -23,11 +23,20 @@
     <PackageReference Include="Xamarin.Forms.CircularProgressBar" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Pages\" />
     <Folder Include="Resources\" />
     <Folder Include="Themes\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flip2Learn.Shared\Flip2Learn.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\SprintCompletedCard.xaml.cs">
+      <DependentUpon>SprintCompletedCard.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Views\SprintCompletedCard.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
