--- a/Flip2Learn.Forms.Android/Properties/AndroidManifest.xml
+++ b/Flip2Learn.Forms.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.bananadevelopment.flip2learn">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="Flip2Learn"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.0.1" package="com.bananadevelopment.flip2learn" android:installLocation="internalOnly">
+	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="29" />
+	<application android:label="Flip2Learn" android:icon="@mipmap/icon" android:theme="@style/MainTheme">
+		<meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-7094228861281666~6945539966" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
