--- a/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
+++ b/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
@@ -152,6 +152,12 @@
     <PackageReference Include="Realm">
       <Version>5.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Google.iOS.MobileAds">
+      <Version>7.57.0</Version>
+    </PackageReference>
+    <PackageReference Include="XF.Material">
+      <Version>1.7.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flip2Learn.Forms\Flip2Learn.Forms.csproj">
@@ -180,8 +186,6 @@
       <Link>Resources\Icon-512.png</Link>
     </BundleResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Renderers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
