--- a/Flip2Learn.Forms.iOS/Info.plist
+++ b/Flip2Learn.Forms.iOS/Info.plist
@@ -36,5 +36,14 @@
 	<string>0.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-7094228861281666~6203212043</string>
+	<key>SKAdNetworkItems</key>
+	<array>
+		<dict>
+		<key>SKAdNetworkIdentifier</key>
+		<string>cstr6suwn9.skadnetwork</string>
+		</dict>
+	</array>
 </dict>
 </plist>
