--- a/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
+++ b/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="FodyWeavers.xml" />
     <Compile Include="Renderers\PageRenderer.cs" />
+    <Compile Include="Renderers\NativeAdViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
