--- a/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
+++ b/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.InAppBilling">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0.1" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.0.0.1" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.1" />
@@ -81,7 +84,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MainApplication.cs" />
     <Compile Include="Renderers\NativeAdViewRenderer.cs" />
+    <Compile Include="Renderers\NativeMediaViewRenderer.cs" />
     <Compile Include="Renderers\SearchPageRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
