--- a/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
+++ b/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
@@ -149,6 +149,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.InAppBilling">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Google.iOS.MobileAds">
