--- a/Flip2Learn.Forms.Android/proguard.cfg
+++ b/Flip2Learn.Forms.Android/proguard.cfg
@@ -1,1 +1,5 @@
 ﻿-keep class com.google.android.gms.ads.MobileAdsInitProvider
+
+-keep class com.google.android.play.core.common.PlayCoreDialogWrapperActivity
+-keep class com.google.android.play.core.review.** { *; }
+-keep class com.google.android.play.core.tasks.** { *; }
