--- a/Flip2Learn.Shared/Flip2Learn.Shared.csproj
+++ b/Flip2Learn.Shared/Flip2Learn.Shared.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="Plugin.InAppBilling" Version="2.0.0" />
+    <PackageReference Include="Plugin.StoreReview" Version="3.0.0-beta" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Realm" Version="5.1.2" />
