--- a/Flip2Learn.Shared/Flip2Learn.Shared.csproj
+++ b/Flip2Learn.Shared/Flip2Learn.Shared.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Resources\" />
     <Folder Include="Database\" />
+    <Folder Include="Application\Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
