--- a/Flip2Learn.Forms/Flip2Learn.Forms.csproj
+++ b/Flip2Learn.Forms/Flip2Learn.Forms.csproj
@@ -24,16 +24,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Themes\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flip2Learn.Shared\Flip2Learn.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Resources\AppResources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>AppResources.resx</DependentUpon>
-    </Compile>
     <Compile Update="Views\SprintCompletedCard.xaml.cs">
       <DependentUpon>SprintCompletedCard.xaml</DependentUpon>
     </Compile>
@@ -41,13 +37,6 @@
   <ItemGroup>
     <EmbeddedResource Update="Pages\FeaturesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\AppResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\AppResources.ru.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SprintCompletedCard.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
