splash screen image

--- a/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
+++ b/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
@@ -153,5 +153,8 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-night-anydpi\flip2learn_splash.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
