--- a/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
+++ b/Flip2Learn.Forms.iOS/Flip2Learn.Forms.iOS.csproj
@@ -194,9 +194,7 @@
     <BundleResource Include="..\Flip2Learn.Forms.Android\Resources\drawable-anydpi\nerd_emoji.png">
       <Link>Resources\nerd_emoji.png</Link>
     </BundleResource>
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="..\Flip2Learn.Forms.Android\Resources\drawable-anydpi\flip2learn_splash.png">
+    <BundleResource Include="..\Flip2Learn.Forms.Android\Resources\drawable-xxxhdpi\flip2learn_splash.png">
       <Link>Resources\flip2learn_splash.png</Link>
     </BundleResource>
   </ItemGroup>
