--- a/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
+++ b/Flip2Learn.Forms.Android/Flip2Learn.Forms.Android.csproj
@@ -85,6 +85,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Effects\Android_RotateEffect.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="Renderers\NativeAdViewRenderer.cs" />
